--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<!-- Compiler Code with Java 11 -->
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
+		<environment>DEV</environment>
 
 		<!-- Global variable for dependencies -->
 		<webdriver.version>3.141.59</webdriver.version>
@@ -142,6 +143,13 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.aeonbits.owner</groupId>
+    		<artifactId>owner</artifactId>
+    		<version>1.0.10</version>
+		</dependency>
+		
 	</dependencies>
  
  <!-- Compiler/ Run Test -->
@@ -167,7 +175,7 @@
 				<configuration>
 					<!-- Run TestNG xml file -->
 					<suiteXmlFiles>
-						<file>src/test/resources/runNopCommerceUser.xml</file>
+						<file>src/test/resources/runBankGuruTestcases.xml</file>
 					</suiteXmlFiles>
 
 					<!-- Argument -->
@@ -179,5 +187,59 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+<!--   <profiles> -->
+<!--         <profile> -->
+<!--                 <id>DEV</id> -->
+<!--                 <build> -->
+<!--                         <plugins> -->
+<!--                                 <plugin> -->
+<!--                                         <groupId>org.apache.maven.plugins</groupId> -->
+<!--                                         <artifactId>maven-surefire-plugin</artifactId> -->
+<!--                                         <version>2.22.2</version> -->
+<!--                                         <configuration> -->
+<!--                                                 <suiteXmlFiles> -->
+<!--                                                         <suiteXmlFile>src/test/resources/runBankGuruDEV.xml</suiteXmlFile> -->
+<!--                                                 </suiteXmlFiles> -->
+<!--                                         </configuration> -->
+<!--                                 </plugin> -->
+<!--                         </plugins> -->
+<!--                 </build> -->
+<!--         </profile> -->
+<!--         <profile> -->
+<!--                 <id>TESTING</id> -->
+<!--                 <build> -->
+<!--                         <plugins> -->
+<!--                                 <plugin> -->
+<!--                                         <groupId>org.apache.maven.plugins</groupId> -->
+<!--                                         <artifactId>maven-surefire-plugin</artifactId> -->
+<!--                                         <version>2.22.2</version> -->
+<!--                                         <configuration> -->
+<!--                                                 <suiteXmlFiles> -->
+<!--                                                         <suiteXmlFile>src/test/resources/runBankGuruTESTING.xml</suiteXmlFile> -->
+<!--                                                 </suiteXmlFiles> -->
+<!--                                         </configuration> -->
+<!--                                 </plugin> -->
+<!--                         </plugins> -->
+<!--                 </build> -->
+<!--         </profile> -->
+<!--         <profile> -->
+<!--                 <id>STAGING</id> -->
+<!--                 <build> -->
+<!--                         <plugins> -->
+<!--                                 <plugin> -->
+<!--                                         <groupId>org.apache.maven.plugins</groupId> -->
+<!--                                         <artifactId>maven-surefire-plugin</artifactId> -->
+<!--                                         <version>2.22.2</version> -->
+<!--                                         <configuration> -->
+<!--                                                 <suiteXmlFiles> -->
+<!--                                                         <suiteXmlFile>src/test/resources/runBankGuruSTAGING.xml</suiteXmlFile> -->
+<!--                                                 </suiteXmlFiles> -->
+<!--                                         </configuration> -->
+<!--                                 </plugin> -->
+<!--                         </plugins> -->
+<!--                 </build> -->
+<!--         </profile> -->
+<!-- </profiles> -->
   
 </project>
